[tool.poetry]
name = "petjo"
version = "0.1.0"
description = "PetJo FastAPI Backend"
authors = ["FathiGhanem <fathii.ghanem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
python-multipart = "^0.0.6"
alembic = "^1.13.1"
redis = "^5.0.1"
slowapi = "^0.1.9"
bleach = "^6.1.0"
itsdangerous = "^2.1.2"
boto3 = "^1.34.34"
pillow = "^10.2.0"
google-auth = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
